--- a/bibliography.bib
+++ b/bibliography.bib
@@ -186,3 +186,32 @@ investigated.},
 	year = {2012},
 	file = {Organisation for Economic Cooperation and Development - 1998 - Organisation for economic cooperation and developm.pdf:C\:\\Users\\Greg\\Zotero\\storage\\LTWXQPK6\\Organisation for Economic Cooperation and Development - 1998 - Organisation for economic cooperation and developm.pdf:application/pdf}
 }
+
+@article{kim_development_2013,
+	title = {Development of an anode structure consisting of graphite tubes and a {SiC} shroud for the electrowinning process in molten salt},
+	volume = {295},
+	issn = {0236-5731, 1588-2780},
+	url = {http://link.springer.com/10.1007/s10967-012-2103-5},
+	doi = {10.1007/s10967-012-2103-5},
+	abstract = {In a molten chloride salt-based electrolysis, chloride evolution at an anode needs to be considered in terms of potential ﬂuctuation, capture, and corrosion problems. Here, we demonstrate an anode structure consisting of graphite tubes and a SiC shroud to be applied to the electrowinning process. A large surface area as well as high corrosion resistivity was achieved through the use of inert graphite tubes. The Cl2 (g) capture was enhanced by the employment of a porous SiC shroud. It also allows an efﬁcient contact of the electrode surface to the LiCl–KCl eutectic melt for an anodic evolution. No signiﬁcant effects of the use of a SiC shroud on the anode overpotential and cell potential were found during the U deposition test.},
+	language = {en},
+	number = {3},
+	urldate = {2018-04-27},
+	journal = {Journal of Radioanalytical and Nuclear Chemistry},
+	author = {Kim, Tack-Jin and Kim, Gha-Young and Yoon, Dalseong and Ahn, Do-Hee and Paek, Seungwoo},
+	month = mar,
+	year = {2013},
+	pages = {1855--1859},
+	file = {Kim et al. - 2013 - Development of an anode structure consisting of gr.pdf:C\:\\Users\\Greg\\Zotero\\storage\\3UUDYXM2\\Kim et al. - 2013 - Development of an anode structure consisting of gr.pdf:application/pdf}
+}
+
+@techreport{noauthor_iaea_2017,
+	title = {{IAEA} {Safeguards}: {Serving} {Nuclear} {Non}-{Proliferation}},
+	url = {https://www.iaea.org/sites/default/files/17/12/sg-serving-nuclear-non-proliferation.pdf},
+	urldate = {2018-04-27},
+	institution = {IAEA},
+	month = dec,
+	year = {2017},
+	pages = {19},
+	file = {sg-serving-nuclear-non-proliferation.pdf:C\:\\Users\\Greg\\Zotero\\storage\\3JXLSW6D\\sg-serving-nuclear-non-proliferation.pdf:application/pdf}
+}
