--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -52,7 +52,7 @@ Pyroprocessing is an eletrochemical separation process used to recycle spent fue
 	\label{fig:flowchart}
 \end{figure}
 
-Figure 1 demonstrates the primary separations steps involved in a general pyroprocessing facility. Included are the process' main parameters along the left side of the flowsheet, each applied to processes most significantly impacted. The boxes on the right side of the processes contain the observable waste produced by each step that \Cyclus can track.
+Figure 1 demonstrates the primary separations steps involved in a general pyroprocessing facility. Included are the process' main parameters along the left side of the flowsheet, each applied to processes most significantly impacted. The boxes on the right side of the processes contain the observable waste produced by each step that \Cyclus can track. Each of main processes are described below regarding information to be used by \Cyclus.
 
 \subsection{Voloxidation}
 
@@ -121,7 +121,7 @@ Throughput is also dependent on material choice for the inert electrodes whose o
 Electroreduction can further improve its throughput by the addition of Li$_2$O as a catalyst and to prevent dissolution of the anode \cite{choi_electrochemical_2015}. The catalyst often is used in concentration of 1 wt\% with potential for up to 3 wt\%. Since Li$_2$O is used to speed up the reaction, it is important to note that for signatures and observables the operators could add more oxide than reported to IAEA. More frequent shipments of lithium oxide can be tracked as an observable to match records.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Method: Proposed Algorithms}
-Prior methodology explored by Hou et al. and Yilmaz et al. \cite{Hou_2016,Yilmaz_2016} consists of minimum relative entropy based model and Poisson distribution respectively. Both methods are based on similar observables for the LWR fuel cycle. Enrichment facilities often have set production speeds for various enrichment levels and typical shipping options, expedited and standard. These production speeds can be monitored via IAEA inspection of waste activity or by monitoring facility power draw and smoke production. What becomes increasingly difficult is a minute increase in production that could be lost in the electrical noise of running a facility. For cases such as this where small diversions take place over an elongated period of time a fuel cycle simulation is beneficial. A nodal array of facilities and their known transport methods between each other is established and shipment times for various enrichment levels and shipping options are observed for irregularities. 
+Prior methodology explored by Hou et al. and Yilmaz et al. \cite{Hou_2016,Yilmaz_2016} consists of minimum relative entropy based model and Poisson distribution respectively. Both methods are based on similar observables for the LWR fuel cycle. Enrichment facilities often have set production speeds for various enrichment levels and typical shipping options, expedited and standard. These production speeds can be monitored via IAEA inspection of waste activity or by monitoring facility power draw and smoke production. What becomes increasingly difficult is a minute increase in production that could be lost in the electrical noise of running a facility. For cases such as this where small diversions take place over an elongated period of time a fuel cycle simulation is beneficial. A nodal array of facilities and their known transport methods between each other is established \cite{Hou_2016}. Shipment times are combined with completion time for each enrichment level to develop a distribution of project completions. Hou et al. and Yilmaz et al. use these distributions to determine the likelihood of diversion through cumulative sum and maximum likelihood algorithms.
 
 \begin{figure}[ht] % replace 't' with 'b' to force it to be on the bottom
 	\centering
@@ -130,14 +130,16 @@ Prior methodology explored by Hou et al. and Yilmaz et al. \cite{Hou_2016,Yilmaz
 	\label{fig:maximumlikelihood}
 \end{figure}
 
+ Scenarios without direct access to fuel orders require indirect observation by tracking the edges of a fuel cycle network. Increasing the number of known 'edges', or transportation routes, increases the algorithm speed with the only monitoring points as intake and output of facilities. Figure 2 demonstrates a partially observed network to which a hybrid minimum relative entropy model is applied. This technique results in a more lenient input compared to a maximum likelihood estimation that requires a majority of the network to be observed \cite{Hou_2016}.
 
-Scenarios without direct access to fuel orders require indirect observation by tracking the edges of a fuel cycle network. Increasing the number of known 'edges', or transportation routes, increases the algorithm speed with the only requirement of monitoring the intake and output of facilities rather than each shipment. Figure 2 demonstrates a partially observed network to which a hybrid minimum relative entropy model is applied. This technique results in a more lenient input compared to a maximum likelihood estimation that requires a majority of the network to be observed \cite{Hou_2016}.
+\section{Discussion}
+Using a material balance area over electrorefining and electroreduction yields the majority of detectable waste from the electrochemical processes. Electroreduction produces the majority of Sr and Cs waste with a considerable decay signature proportional to the efficiency and size of the feed batch \cite{Borrelli_2017,flowsheet_1998}. The electrorefining process also produces the fission product waste stream which requires monitoring. The following products are produced and tracked in this step: Tc, Ag, Pd, Rh, Ru, Mo and Zr \cite{flowsheet_1998}. Material balances over the remaining processes are used to verify diversion did not occur. Electrowinning produces Cs waste similar to electroreduction except in reduced quantities. Fuel fabrication is of high risk since finished product can be diverted with no additional processing steps, therefore a material balance must also be taken here. 
 
-
+To determine the most significant places of diversion and where to observe them, multiple scenarios must be considered. Each facility parameter must be varied to observe their effects, as well as using a limited number of material balance areas. Scenarios will be run that include various monitoring points with the goal of determining if excess material was produced and what parameter was altered. For example, an increase in Cs production points to electroreduction and electrowinning. If both increase similarly then current is likely affected as these processes share an increase efficiency with increased current. Further in this scenario, if Cs production increases while Sr does not, electrowinning must be the point at which parameters are altered. A set of these scenarios will be used for sensitivity and importance analysis on the generic pyroprocessing facility.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
-This analysis demonstrates the variability in commercialized pyroprocessing facilities and potential signatures and observables that will aid diversion detection. \Cyclus also is outlined as tool in detecting shadow fuel cycles through its agent-based simulation and modular facilities, allowing for variations in plant design. Modeling and data collection of shadow fuel cycles will be performed in the \Cyclus environment after creation of a library specific to the unique needs of electrochemical refinement. Data from these simulations will be utilized in a minimum relative entropy model with additional signatures and observables to ideally reduce detection delay while maintaining high accuracy.
+This analysis demonstrates the variability in commercialized pyroprocessing facilities and their affects on potential signatures and observables that will be tracked through a detailed archetype. \Cyclus also is outlined as tool in detecting shadow fuel cycles through its agent-based simulation and modular facilities, allowing for variations in plant design. Modeling and data collection of shadow fuel cycles will be performed in the \Cyclus environment after creation of a library specific to the unique needs of electrochemical refinement. Data from these simulations will be utilized in a minimum relative entropy model with additional signatures and observables to inform on detector placements and measurement points leading to more reliable diversion detection.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Acknowledgments}
